[gd_scene load_steps=7 format=3 uid="uid://dirjp2xul0tgh"]

[ext_resource type="Script" uid="uid://bec04p2e5v7kt" path="res://scenes/Selection/select_team.gd" id="1_ntsu1"]
[ext_resource type="Texture2D" uid="uid://ctlnvfni7bpao" path="res://assets/siwy.png" id="2_iv6xl"]
[ext_resource type="Texture2D" uid="uid://bhrse8vm4dc08" path="res://assets/hat.png" id="2_ntsu1"]
[ext_resource type="Texture2D" uid="uid://cgyt5vhcoobbq" path="res://assets/flames.png" id="3_28sxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv6xl"]
bg_color = Color(0.863436, 5.31845e-06, 7.70092e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28sxy"]
bg_color = Color(0.439279, 9.56599e-07, 2.16588e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SelectTeam" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntsu1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -229.0
offset_right = 408.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeamA" type="TextureRect" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ntsu1")
expand_mode = 3
stretch_mode = 4

[node name="TeamB" type="TextureRect" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_iv6xl")
expand_mode = 2
stretch_mode = 4
flip_h = true

[node name="StartButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 309.0
offset_top = 505.0
offset_right = 509.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_iv6xl")
theme_override_styles/normal = SubResource("StyleBoxFlat_28sxy")
text = "Start"

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 62.0
offset_top = 331.0
offset_right = 362.0
offset_bottom = 531.0
texture = ExtResource("3_28sxy")
expand_mode = 1
